--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
     "html-loader": "^3.0.0",
     "html-webpack-plugin": "^5.5.0",
     "lil-gui": "^0.11.0",
+    "mapbox-gl": "^2.9.1",
     "mini-css-extract-plugin": "^2.4.3",
     "portfinder-sync": "0.0.2",
     "raw-loader": "^4.0.2",
     "style-loader": "^3.3.1",
     "three": "^0.134.0",
+    "threebox-plugin": "^2.2.7",
     "vercel": "^25.1.0",
     "webpack": "^5.60.0",
     "webpack-cli": "^4.9.1",
